--- a/Facebook/pom.xml
+++ b/Facebook/pom.xml
@@ -1,17 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>Amazon_Client</groupId>
-  <artifactId>Amazon</artifactId>
-  <version>2024-05</version>
-  <name>amazonEcommerce</name>
-  <description>feature added add to cart login and signup</description>
-  
-  <dependencies>
+  <groupId>Meta</groupId>
+  <artifactId>Facebook</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+   <dependencies>
 <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 <dependency>
     <groupId>org.seleniumhq.selenium</groupId>
     <artifactId>selenium-java</artifactId>
-    <version>4.18.1</version>
+    <version>4.22.0</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
@@ -31,15 +28,14 @@
     <artifactId>commons-io</artifactId>
     <version>2.11.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 <dependency>
     <groupId>org.testng</groupId>
     <artifactId>testng</artifactId>
-    <version>6.9.10</version>
+    <version>7.4.0</version>
     <scope>test</scope>
 </dependency>
 
 </dependencies>
 
-  
-  
 </project>
